Fix orders page overflow

--- a/frontend_react/src/components/OrdersWindow/OrdersWindow.css
+++ b/frontend_react/src/components/OrdersWindow/OrdersWindow.css
@@ -5,4 +5,5 @@
   flex: 1;
   height: 100vh;
   position: relative;
+  overflow: scroll;
 }
