--- a/frontend_react/src/components/OrdersWindow/PopupButton/PopupButton.css
+++ b/frontend_react/src/components/OrdersWindow/PopupButton/PopupButton.css
@@ -1,5 +1,5 @@
 .popup-button {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   right: 10px;
   display: flex;
